@@ -41,11 +41,4 @@
     visible="False" i18n:attributes="title">
   <permission value="ATContentTypes: View history"/>
  </action>
- <action title="Caching" action_id="caching" category="object"
-    condition_expr=""
-    url_expr="string:${object/absolute_url}/caching"
-    visible="True"
-    i18n:attributes="title">
-  <permission value="Modify portal content"/>
- </action>
 </object>
